unpackaged/main/default/objects/simplesms__Textey_TO_Number_Configuration__c/simplesms__Textey_TO_Number_Configuration__c.object-meta.xml
<CustomObject>
    <label>BT: Messaging TO Number Configuration</label>
    <nameField>
        <displayFormat>TO-{0000}</displayFormat>
        <label>BT: Messaging TO Number Configuration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT: Messaging TO Number Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>