unpackaged/main/default/objects/simplesms__Textey_TO_Number_Configuration__c/fields/simplesms__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>