unpackaged/main/default/objects/simplesms__Textey_TO_Number_Configuration__c/fields/simplesms__Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Phone_Field__c</fullName>
    <label>Phone Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>