unpackaged/main/default/objects/simplesms__Textey_TO_Number_Configuration__c/fields/simplesms__SObject__c.field-meta.xml
<CustomField>
    <fullName>simplesms__SObject__c</fullName>
    <label>SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>