unpackaged/main/default/objects/simplesms__Textey_TO_Number_Configuration__c/fields/simplesms__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>